Database works but need to fix table creations